<resources>
    <string name="app_name">Memory Locker</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_create_account">CREATE ACCOUNT</string>
    <string name="prompt_ui">Lock Your Memories Forever.\nOr Never…</string>
    <string name="ui_button">GET STARTED</string>
    <string name="prompt_title">Memory Title</string>
    <string name="prompt_description">Memory Description</string>
    <string name="location_default_image">android.resource://com.mka.memorylocker/drawable/default_img</string>
</resources>