<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".CreateAccountActivity">

        <ProgressBar
            android:id="@+id/act_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/prompt_username"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="10dp" />

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/act_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/act_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/act_button_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:text="@string/prompt_create_account"
            tools:ignore="TextContrastCheck" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>