<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="10dp"
        android:textSize="30sp"
        android:text="@string/app_name"
        android:fontFamily="@font/roboto_condensed_bold"
        android:textColor="@color/black"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:padding="10dp"
        android:elevation="36dp"
        app:cardCornerRadius="12dp"
        android:requiresFadingEdge="vertical"
        app:cardUseCompatPadding="true"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/prompt_ui"
            android:textSize="18sp" />


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        android:text="@string/ui_button"/>



</androidx.appcompat.widget.LinearLayoutCompat>